Fix hamburger color in dark mode

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,3 +1,18 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+}
+
+button {
+  color: currentColor;
+  cursor: pointer;
+}
+
+a {
+  color: currentColor;
 }
